App is functional with all 'must' requirements. Need to make UI pretty now

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+//Spencer Walker
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
